# Steganografie

./: CMakeLists.txt  Makefile  coder.c  config.h  data.txt  extracted_png.txt  extrcted_bmp.txt  lzw.h  main.c  png_process.c
.cache/clangd/index/: bmp.c.0CD0E56404AC3E91.idx  bmp.c.25481FBCDF6DB5A2.idx  bmp.h.7A246DE1044144F1.idx  bmp.h.DEBCCF12B1E6E281.idx  coder.c.59C769FB4069FB05.idx  coder.c.BEDE730E7F9D70B3.idx  coder.h.9B575F15525E2A47.idx  coder.h.BF3ADC48F5C53B4D.idx  config.h.B68B3FA685F0DF0C.idx  config.h.D88A6E7BCAE9B5DC.idx  lzw.c.2A78280FEE8AB463.idx  lzw.c.D912B3D1BC5223F1.idx  lzw.h.099059D19884D415.idx  lzw.h.B5CB5D9050E4CB6E.idx  main.c.2483A0DE7D54314D.idx  main.c.75050C250130CD29.idx  png.h.730FCE6F68C4F38F.idx  png.h.C367EBEE3B35E2CC.idx  png_process.c.E821620FB9DC7955.idx  png_process.h.3743713612C842DF.idx  pngconf.h.73648CA46E4A5BA7.idx  pngconf.h.AFAA6AEB54CF1467.idx  pnglibconf.h.717E929D4A3CE0EF.idx  pnglibconf.h.8BD7EBC8DAD2677E.idx  zconf.h.E210D6BF65485AF4.idx  zlib.h.B381C07B6CDD46E6.idx
src/: bmp.c  bmp.h  coder.h  config.h  lzw.c  main.c  png_process.c  png_process.h
